@@ -1,3 +1,8 @@
+2021-09-18  Jean Brefort  <jean.brefort@normalesup.org>
+
+	* src/graph.c (gnm_go_data_vector_get_value): fix error bars when data
+	are in a multi-column array. [#594]
+
 2021-06-10  Morten Welinder <terra@gnome.org>
 
 	* configure.ac: Post-release bump.
